tour align issue for windows

--- a/src/pages/obstetric/Obstetric.scss
+++ b/src/pages/obstetric/Obstetric.scss
@@ -25,7 +25,7 @@
   left: 35%;
 
   @media only screen and (min-width: 1200px) {
-    left: 25%;
+    left: 25.5%;
   }
 }
 
@@ -42,7 +42,7 @@
   left: 32%;
 
   @media only screen and (min-width: 1200px) {
-    left: 22.5%;
+    left: 23.5%;
   }
 }
 
